@@ -51,7 +51,13 @@ ignored</p>
   <tr>
     <td valign="top">file</td>
     <td valign="top">the file to write the message to.</td>
-    <td valign="top" align="center">No</td>
+    <td valign="top" align="center" rowspan="2">Optionally one of these may be specified</td>
+  </tr>
+  <tr>
+    <td valign="top">output</td>
+    <td valign="top">the <a href="../CoreTypes/resources.html">Resource</a>
+      to write the message to (see <a href="../develop.html#set-magic">note</a>).
+      <b>Since Ant 1.8</b></td>
   </tr>
   <tr>
     <td valign="top">append</td>
