@@ -21,78 +21,41 @@ package org.apache.tools.ant.taskdefs;
 import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
 
-import org.apache.tools.ant.BuildFileTest;
+import junit.framework.TestCase;
+
 import org.apache.tools.ant.DefaultLogger;
 import org.apache.tools.ant.Project;
 
 /**
+ * Test Java-dependent parts of the Echo task.
  */
-public class EchoTest extends BuildFileTest {
+public class EchoTest extends TestCase {
 
+    /**
+     * Create a new EchoTest.
+     * @param name
+     */
     public EchoTest(String name) {
         super(name);
     }
 
-    public void setUp() {
-        configureProject("src/etc/testcases/taskdefs/echo.xml");
-    }
-
-    public void tearDown() {
-        executeTarget("clean");
-    }
-
-    // Output an empty String
-    public void test1() {
-        expectLog("test1", "");
-    }
-    
     public void testLogBlankEcho() {
+        Project p = new Project();
+        p.init();
         EchoTestLogger logger = new EchoTestLogger();
-        getProject().addBuildListener(logger);
-        getProject().executeTarget("test1");
-        assertEquals("     [echo] ", logger.lastLoggedMessage );
+        p.addBuildListener(logger);
+        Echo echo = new Echo();
+        echo.setProject(p);
+        echo.setTaskName("testLogBlankEcho");
+        echo.execute();
+        assertEquals("[testLogBlankEcho] ", logger.lastLoggedMessage );
     }
  
-    // Output 'OUTPUT OF ECHO'
-    public void test2() {
-        expectLog("test2", "OUTPUT OF ECHO");
-    }
-
-    public void test3() {
-        expectLog("test3", "\n"+
-                              "    This \n"+
-                              "    is\n"+
-                              "    a \n"+
-                              "    multiline\n"+
-                              "    message\n"+
-                              "    ");
-    }
-
-    public void testFile() throws Exception {
-        executeTarget("testFile");
-    }
-
-    public void testAppend() throws Exception {
-        executeTarget("testAppend");
-    }
-
-    public void testEmptyEncoding() throws Exception {
-        executeTarget("testEmptyEncoding");
-    }
-
-    public void testUTF16Encoding() throws Exception {
-        executeTarget("testUTF16Encoding");
-    }
-    public void testUTF8Encoding() throws Exception {
-        executeTarget("testUTF8Encoding");
-    }
-    
     private class EchoTestLogger extends DefaultLogger {
         String lastLoggedMessage;
-    
         
         /**
-         * 
+         * Create a new EchoTestLogger.
          */
         public EchoTestLogger() {
             super();
@@ -100,8 +63,9 @@ public class EchoTest extends BuildFileTest {
             this.setOutputPrintStream(new PrintStream(new ByteArrayOutputStream(256)));
             this.setErrorPrintStream(new PrintStream(new ByteArrayOutputStream(256)));
         }
-        /* 
-         * @param message
+
+        /**
+         * {@inheritDoc}
          */
         protected void log(String message) {
             this.lastLoggedMessage = message;
